test/fail/vt_def15.v3
//@execute 0=true; 1=false; 2=false; 3=false; 4=!BoundsCheckException
type HH {
	case One(a: int);
}
class vt_def15a {
	var d: HH;
}
def x = [HH.One(0), HH.One(1), HH.One(2), HH.One(-344)];
def main(a: int) -> bool {
	return x(a) == vt_def15a.new().d;
}
